2003-01-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (rsvg_parse_style_attrs): Also honor the "*" style
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1 : New man page, gets installed
	* configure.in : Post release version number bump -> 2.1.6
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c (start_rect): Handle rounded rects missing "ry" param 
	properly
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* *: Rework previous commit to use g_ascii_dtostr and g_ascii_strtod
	
2003-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-private.h: Add setlocale wrapper fns. Problem found by George 
	Lebl (jirka@5z.com), work based on/inspired by a patch by him.
	* rsvg.c: Use above fns
	* rsvg-css.c: Ditto
	* rsvg-text.c: Ditto
	* rsvg-shapes.c: Ditto
	
=== librsvg 2.1.5 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Added rsvg-private.h

	* NEWS: 
	* configure.in:
	2.1.5

=== librsvg 2.1.4 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.1.4

2003-01-08 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Handle display and visibility styles to some extent
	* rsvg-text.c: Use above
	* rsvg-shapes.c: Ditto
	
2003-01-08 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c, rsvg-private.h, rsvg-shapes.c, rsvg-shapes.h, rsvg-styles.c, rsvg-styles.h, rsvg-text.c, rsvg-text.h : Separate functionality out into separate, managable files

2003-01-07 Dom Lachowicz <cinamod@hotmail.com>

	* test-rsvg.c : Unref pixbuf, free memory leak. Thanks valgrind.
	
=== librsvg 2.1.3 ===
	
2003-01-03 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (): Start handling text-decoration style
	
2003-01-02 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (*): Support font-style, font-variant, font-weight, 
	font-stretch, font-family, including the "inherit" option
	* rsvg-css.c (*): ditto, CSS functions for parsing time, frequency, 
	degrees/radians/grades	
